api: add models, repositories and controllers angular: add modules and service

--- a/backend/BookReservationAPI/BookReservationAPI/appsettings.json
+++ b/backend/BookReservationAPI/BookReservationAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionString": {
+    "CarDB": "server=192.168.100.11;database=Aplikacja;User ID=sa;password=Password123;"
+  },
   "AllowedHosts": "*"
 }
