--- a/backend/BookReservationAPI/BookReservationAPI/BookReservationAPI.csproj
+++ b/backend/BookReservationAPI/BookReservationAPI/BookReservationAPI.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20210430095706_BookReservationAPI.Models.BookModel.cs" />
+    <Compile Remove="Migrations\20210430095706_BookReservationAPI.Models.BookModel.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.13" />
